cdf to cusromers is working

--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -117,8 +117,8 @@
                             color="{{tableParams.active? 'warn': 'primary'}}" (click)="confirmDialog(element.id)">
                             <mat-icon aria-label="Delete">delete</mat-icon>
                         </button>
-                        <!-- <button mat-icon-button color="primary" (click)="changeCdfStatus(element.id)"> -->
-                        <button mat-icon-button color="primary" (click)="    onEditNewCustomers(element)">
+                       <button mat-icon-button color="primary" (click)="changeCdfStatus(element.id)">
+
                             <mat-icon>thumb_up</mat-icon>
                         </button>
                     </div>
