--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -36,15 +36,15 @@
             <ng-container matColumnDef="company">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
                 <td mat-cell *matCellDef="let element">
-                    <b> {{ element.company | uppercase }} </b> <br> {{ element.date | date:'d/M/y' }}
+                    <b> {{ element.company | uppercase }} </b>
                 </td>
             </ng-container>
-            <ng-container matColumnDef="date">
+            <!-- <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
                 <td mat-cell *matCellDef="let element">
                 </td>
-            </ng-container>
-            <ng-container matColumnDef="name">
+            </ng-container> -->
+            <!-- <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
                 <td mat-cell *matCellDef="let element">
                     <b> {{ element.name | uppercase }} </b> <br> {{ element.email }}
@@ -54,8 +54,8 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
                 <td mat-cell *matCellDef="let element">
                 </td>
-            </ng-container>
-            <ng-container matColumnDef="reference">
+            </ng-container> -->
+            <!-- <ng-container matColumnDef="reference">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Reference </th>
                 <td mat-cell *matCellDef="let element">
                     <b> {{ element.reference | uppercase }}</b> <br> {{ element.reference_person }}
@@ -65,31 +65,47 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
                 <td mat-cell *matCellDef="let element">
                 </td>
-            </ng-container>
-            <ng-container matColumnDef="brands">
+            </ng-container> -->
+            <!-- <ng-container matColumnDef="brands">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Brands </th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.brands }}
                 </td>
-            </ng-container>
-            <ng-container matColumnDef="display_names">
+            </ng-container> -->
+            <!-- <ng-container matColumnDef="display_names">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Display Names</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.display_names }}
                 </td>
-            </ng-container>
-            <ng-container matColumnDef="platforms">
+            </ng-container> -->
+            <!-- <ng-container matColumnDef="platforms">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Platforms</th>
                 <td class="width" mat-cell *matCellDef="let element">{{ element.platforms | titlecase }} </td>
-            </ng-container>
-            <ng-container matColumnDef="address">
+            </ng-container> -->
+            <!-- <ng-container matColumnDef="address">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
                 <td mat-cell *matCellDef="let element">{{ element.address }}</td>
-            </ng-container>
-            <ng-container matColumnDef="mobile">
+            </ng-container> -->
+            <!-- <ng-container matColumnDef="mobile">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile</th>
                 <td mat-cell *matCellDef="let element">{{ element.mobile }}</td>
+            </ng-container> -->
+            <ng-container matColumnDef="balance">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
+                <td mat-cell *matCellDef="let element">{{ element.balance | currency: 'INR' }}</td>
             </ng-container>
+            <ng-container matColumnDef="payment">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>payment</th>
+                <td mat-cell *matCellDef="let element">{{ element.payment | currency: 'INR' }}</td>
+            </ng-container>
+            <ng-container matColumnDef="due_limit">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Due</th>
+                <td mat-cell *matCellDef="let element">{{ element.due_limit | currency: 'INR' }}</td>
+            </ng-container>
+            <!-- <ng-container matColumnDef="tier_id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>tier</th>
+                <td mat-cell *matCellDef="let element">{{ element.tier_id }}</td>
+            </ng-container> -->
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
                 <td mat-cell *matCellDef="let element">{{ element.status }}</td>
@@ -97,19 +113,14 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-
-                        <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
-                            type="button" (click)="onEditNewCdf(element)">
-                            <mat-icon aria-label="Edit">edit</mat-icon>
-                        </button>
-
-                        <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                        type="button" (click)="onEditNewCdf(element)">
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
                         color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
                         <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
-
-
-
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
