--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -102,10 +102,10 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Due</th>
                 <td mat-cell *matCellDef="let element">{{ element.due_limit | currency: 'INR' }}</td>
             </ng-container>
-            <!-- <ng-container matColumnDef="tier_id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>tier</th>
-                <td mat-cell *matCellDef="let element">{{ element.tier_id }}</td>
-            </ng-container> -->
+           <ng-container matColumnDef="tier_code">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
+                <td mat-cell *matCellDef="let element">{{ element.tier_code  | uppercase}}</td>
+            </ng-container>
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
                 <td mat-cell *matCellDef="let element">{{ element.status }}</td>
