thums click to cdf active and add duelimt

--- a/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.html
+++ b/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.html
@@ -203,7 +203,8 @@
                 <div class="block">
                     <mat-form-field>
                         <mat-label>Mobile Number</mat-label>
-                        <input matInput formControlName="mobile" type="tel" type="number" (keyup)="onMobileCheck()" />
+                        <input matInput formControlName="mobile" type="tel" type="number" />
+                        <!-- (keyup)="onMobileCheck()" -->
                     </mat-form-field>
                     <div>
                         <ng-container *ngIf="!isMobileExist">
