--- a/frontend/src/app/layout/cdf/cdf.component.scss
+++ b/frontend/src/app/layout/cdf/cdf.component.scss
@@ -21,6 +21,10 @@ th {
     color: rgb(0, 0, 0);
     font-size: 16px;
 }
+td.mat-cell{
+    padding: 0 5px 0 0 ;
+
+}
 td {
     color: rgb(73 70 70 / 87%);
 }
