--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -39,76 +39,21 @@
                     <b> {{ element.company | uppercase }} </b>
                 </td>
             </ng-container>
-            <!-- <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-                <td mat-cell *matCellDef="let element">
-                </td>
-            </ng-container> -->
-            <!-- <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                <td mat-cell *matCellDef="let element">
-                    <b> {{ element.name | uppercase }} </b> <br> {{ element.email }}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-                <td mat-cell *matCellDef="let element">
-                </td>
-            </ng-container> -->
-            <!-- <ng-container matColumnDef="reference">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Reference </th>
-                <td mat-cell *matCellDef="let element">
-                    <b> {{ element.reference | uppercase }}</b> <br> {{ element.reference_person }}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="reference_person">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-                <td mat-cell *matCellDef="let element">
-                </td>
-            </ng-container> -->
-            <!-- <ng-container matColumnDef="brands">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Brands </th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.brands }}
-                </td>
-            </ng-container> -->
-            <!-- <ng-container matColumnDef="display_names">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Display Names</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.display_names }}
-                </td>
-            </ng-container> -->
-            <!-- <ng-container matColumnDef="platforms">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Platforms</th>
-                <td class="width" mat-cell *matCellDef="let element">{{ element.platforms | titlecase }} </td>
-            </ng-container> -->
-            <!-- <ng-container matColumnDef="address">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
-                <td mat-cell *matCellDef="let element">{{ element.address }}</td>
-            </ng-container> -->
-            <!-- <ng-container matColumnDef="mobile">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile</th>
-                <td mat-cell *matCellDef="let element">{{ element.mobile }}</td>
-            </ng-container> -->
             <ng-container matColumnDef="balance">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Initial Balance</th>
                 <td mat-cell *matCellDef="let element">{{ element.balance | currency: 'INR' }}</td>
             </ng-container>
             <ng-container matColumnDef="payment">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>payment</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Payment</th>
                 <td mat-cell *matCellDef="let element">{{ element.payment | currency: 'INR' }}</td>
             </ng-container>
             <ng-container matColumnDef="due_limit">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Due</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Limit</th>
                 <td mat-cell *matCellDef="let element">{{ element.due_limit | currency: 'INR' }}</td>
             </ng-container>
-           <ng-container matColumnDef="tier_code">
+            <ng-container matColumnDef="tier_code">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
-                <td mat-cell *matCellDef="let element">{{ element.tier_code  | uppercase}}</td>
-            </ng-container>
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-                <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.tier_code | uppercase}}</td>
             </ng-container>
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
