--- a/frontend/src/app/layout/cdf/cdf-to-customers/cdf-to-customers.component.scss
+++ b/frontend/src/app/layout/cdf/cdf-to-customers/cdf-to-customers.component.scss
@@ -17,6 +17,11 @@
     .box {
         display: flex;
     }
+    .background_color{
+    background-color: lightgray;
+    padding: 6px 0px 6px 5px;
+    width: 98%;
+}
 
     .block {
         margin: 0 10px 0 10px;
