--- a/frontend/src/app/layout/cdf/cdf-to-customers/cdf-to-customers.component.html
+++ b/frontend/src/app/layout/cdf/cdf-to-customers/cdf-to-customers.component.html
@@ -1,4 +1,9 @@
-<h1 mat-dialog-title><b> Add Customer</b> </h1>
+<div class="main-header">
+    <h1 mat-dialog-title><b> Add Customer</b> </h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
 <div class="container">
     <mat-divider></mat-divider>
     <br>
