--- a/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.scss
+++ b/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.scss
@@ -1,3 +1,12 @@
+.main-header{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.mat-dialog-title {
+    margin: 5px 0 0  0;
+    display: block;
+}
 .container {
     .mat-form-field {
         width: 300px;
@@ -5,10 +14,6 @@
         flex-direction: column;
     }
 
-    .mat-dialog-title {
-        margin: 0 0 20px;
-        display: block;
-    }
 
     .input {
         width: 100%;
