close button add in cdf,tier,user,item tab

--- a/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.scss
+++ b/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.scss
@@ -2,10 +2,14 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
-}
-.mat-dialog-title {
-    margin: 5px 0 0  0;
-    display: block;
+    .mat-dialog-title {
+        margin: 5px 0 0  0;
+        display: block;
+    }
+    .mat-button {
+        min-width: 40px;
+        padding: 0 10px;
+    }
 }
 .container {
     .mat-form-field {
