--- a/frontend/src/app/layout/customers/tier/add-tier/add-tier.component.html
+++ b/frontend/src/app/layout/customers/tier/add-tier/add-tier.component.html
@@ -1,5 +1,10 @@
-<div class="container">
+<div class="main-header">
     <h1 mat-dialog-title><b> {{ !this.data ? 'Add Tier' : 'Update Tier' }} </b></h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
+<div class="container">
     <mat-divider></mat-divider>
     <br>
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
