--- a/frontend/src/app/layout/user/add-user/add-user.component.html
+++ b/frontend/src/app/layout/user/add-user/add-user.component.html
@@ -1,5 +1,10 @@
+<div class="main-header">
+    <h1 mat-dialog-title><b> {{ !this.data ?  'Add user' : 'Update user' }}</b> </h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
 <div class="container">
-    <h1 mat-dialog-title> {{ !this.data ? 'Add user' : 'Update user' }} </h1>
 
     <mat-divider></mat-divider>
     <br>
