--- a/frontend/src/app/layout/cdf/cdf-to-customers/cdf-to-customers.component.scss
+++ b/frontend/src/app/layout/cdf/cdf-to-customers/cdf-to-customers.component.scss
@@ -1,14 +1,16 @@
-.main-header {
+.main-header{
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
-
+    .mat-dialog-title {
+        margin: 5px 0 0  0;
+        display: block;
+    }
+    .mat-button {
+        min-width: 40px;
+        padding: 0 10px;
+    }
 }
-.mat-dialog-title {
-    margin: 5px 0 0  0;
-    display: block;
-}
-
 .container {
     .mat-form-field {
         width: 220px;
