--- a/frontend/src/app/layout/customers/tier/tier.component.html
+++ b/frontend/src/app/layout/customers/tier/tier.component.html
@@ -1,6 +1,11 @@
-<div>
+<div class="main-header">
+
     <h1 mat-dialog-title><b>Tier</b></h1>
+    <button mat-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
 </div>
+
 <mat-divider></mat-divider>
 <br>
 <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
