--- a/frontend/src/app/layout/items/add-item/add-item.component.scss
+++ b/frontend/src/app/layout/items/add-item/add-item.component.scss
@@ -1,3 +1,16 @@
+.main-header{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    .mat-dialog-title {
+        margin: 5px 0 0  0;
+        display: block;
+    }
+    .mat-button {
+        min-width: 40px;
+        padding: 0 10px;
+    }
+}
 .item-form {
     .box {
         display: flex;
